use import image

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfoliov0-1",
   "private": true,
   "version": "0.0.0",
-  "homepage":"https://flywww.github.io/PersonalSite",
+  "homepage":"https://stanley004.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
